--- a/CloudflareAssessment/src/main/resources/application.properties
+++ b/CloudflareAssessment/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=CloudflareAssessment
 spring.datasource.url=jdbc:mysql://localhost:3306/urlShortener
 spring.datasource.username=root
-spring.datasource.password=mypassword
+spring.datasource.password='example'
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
