--- a/CloudflareAssessment/docker-compose.yml
+++ b/CloudflareAssessment/docker-compose.yml
@@ -23,6 +23,28 @@ services:
     networks:
       - url-shortener-network
 
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - url-shortener-network
+
+  grafana:
+    image: grafana/grafana:9.5.2
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    restart: unless-stopped
+    volumes:
+      - ./monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+    networks:
+      - url-shortener-network
+
 networks:
   url-shortener-network:
+    driver: bridge
 
